log
Fri 05 May 2023 06:45:56 PM UTC: 
 tests:  0|5
total_score: 0/70
f4d477a
Fri 05 May 2023 06:59:08 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:25: error: ‘j’ undeclared (first use in this function)
   60 |           if(n->sudo[k][j] == 0)
      |                         ^
sudoku.c:60:25: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
04440bb
Fri 05 May 2023 06:59:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ebbf5b5
